Changelog
=========

1.1.dev0 - (unreleased)
-----------------------

1.0 - (2016-05-04)
------------------
* Feature: added documentation
  [alecghica refs #69689]
* Bug fix: fixed package structure
  [alecghica refs #69689]
* Feature: innitial release
  [szabozo0 refs #69689]
