@@ -1,4 +1,5 @@
-# See http://peak.telecommunity.com/DevCenter/setuptools#namespace-packages
+""" See http://peak.telecommunity.com/DevCenter/setuptools#namespace-packages
+"""
 try:
     __import__('pkg_resources').declare_namespace(__name__)
 except ImportError:
