@@ -1,1 +1,7 @@
-from rabbitmq import RabbitMQConnector
+""" Init
+"""
+from eea.rabbitmq.client.rabbitmq import RabbitMQConnector
+
+__all__ = [
+    RabbitMQConnector.__name__
+]
