@@ -1,0 +1,15 @@
+<configure
+    xmlns:genericsetup="http://namespaces.zope.org/genericsetup"
+    xmlns:five="http://namespaces.zope.org/five"
+    xmlns:i18n="http://namespaces.zope.org/i18n"
+    i18n_domain="eea">
+
+    <genericsetup:registerProfile
+        name="default"
+        title="EEA RabbitMQ Client"
+        directory="profiles/default"
+        description="A Plone extension providing eea.rabbitmq.client"
+        provides="Products.GenericSetup.interfaces.EXTENSION"
+    />
+
+</configure>
