@@ -1,5 +1,5 @@
 # -*- coding: utf-8 -*-
-""" Daviz tests package
+""" tests package
 """
 __author__ = """European Environment Agency (EEA)"""
 __docformat__ = 'plaintext'
