@@ -2,12 +2,14 @@
 """
 import doctest
 import unittest
+
+from eea.rabbitmq.client.tests.base import FUNCTIONAL_TESTING
 from plone.testing import layered
-from plone.app.testing import FunctionalTesting
 
 OPTIONFLAGS = (doctest.REPORT_ONLY_FIRST_FAILURE |
                doctest.ELLIPSIS |
                doctest.NORMALIZE_WHITESPACE)
+
 
 def test_suite():
     """ Suite
